# backup_file

hg_ros_pololu/: CMakeLists.txt
hg_ros_teledyne_dvl/: CMakeLists.txt  package.xml
hg_ros_teledyne_dvl/dvl_script/: 001.txt  example.txt
hg_ros_teledyne_dvl/src/: dvl_node.cpp  dvl_node.cpp~
modbus_ascii_master/modbusUI/: index.html
modbus_ascii_master/modbusUI/css/: style.css  ubuntu-font.css
modbus_ascii_master/modbusUI/js/: app.js  factory.js  script.js
modbus_ascii_master/modbus_ascii_ros/: .cproject  .project  CMakeLists.txt  Makefile  package.xml
modbus_ascii_master/modbus_ascii_ros/launch/: modbus_device_server.launch  modbus_device_server.launch~  modbus_device_server_sim.launch
modbus_ascii_master/modbus_ascii_ros/msg/: MBGetRegisterName.msg  Switch.msg
modbus_ascii_master/modbus_ascii_ros/src/: io_and_pressure.cpp  io_and_pressure.cpp~  zeabus_modbus_master.cpp  zeabus_modbus_master.cpp~
modbus_ascii_master/modbus_ascii_ros/srv/: BarometerMode.srv  BatteryInfo.srv  DeviceDiscovered.srv  GPIOStatus.srv  IOCommand.srv  MBBitRegisterCommand.srv  MBBitRegisterStatus.srv  MBWordRegisterCommand.srv  MBWordRegisterStatus.srv  ReceiveStatus.srv  SendCommand.srv
rules.d/: 10-zeabus.rules  70-persistent-net.rules  99-microstrain.rules  99-usb2serial.rules  99-usb2serial.rules~  README  zz-ueyeusb.rules
setting/: bash_aliases  hosts  include_network_interface.bash  install_opencv.bash  install_python_extension_zeabus.bash  install_ros_kinetic.bash
zeabus_bringup/: CMakeLists.txt  package.xml
zeabus_bringup/launch/: all_bringup.launch  all_service.launch  minimal.launch  modbus.launch  vision_service.launch  zeabus_controller_localize.launch  zeabus_controller_localize_switch.launch  zeabus_dvl_localize.launch  zeabus_joy_control.launch  zeabus_localization_ukf.launch  zeabus_mix_localize.launch  zeabus_smoother.launch
zeabus_bringup/launch/includes/: auv_base.launch.xml  description.launch.xml  robot.launch.xml
zeabus_bringup/launch/includes/obsidian/: auv_base.launch.xml  robot_localization_ukf.launch  robot_localization_ukf.launch.xml  robot_localization_ukf_fog.launch  setup_usb_camera.sh
zeabus_bringup/launch/includes/obsidian/camera_info/: logitech_025039A0.yaml
zeabus_bringup/launch/includes/obsidian/sensors/: altimeter.launch.xml  camera.launch.xml  dvl.launch.xml  imu_kvh.launch.xml  imu_microstrain.launch.xml  imu_trax.launch.xml
zeabus_bringup/param/defaults/: smoother.yaml
zeabus_bringup/param/obsidian/: diagnostics.yaml
zeabus_bringup/scripts/: imu_3D_visualization.py  zeabus_call.py  zeabus_shutdown.py
zeabus_command/: CMakeLists.txt  package.xml
zeabus_command/launch/: ai.launch  ai_fix.launch
zeabus_command/src/: aicontrol.py  constants.py  constants_fix.py  drum.py  flare.py  kill_node.py  main.py  main_fix.py  navigate.py  switch.py
zeabus_command_sim/: CMakeLists.txt  package.xml
zeabus_command_sim/src/: aicontrol.py  constants.py  flare.py  navigate.py  stop.py  test.py
zeabus_controller/: .const_dump.yaml.swp  CMakeLists.txt  README.md  const_dump.yaml  package.xml
zeabus_controller/constant/: sim_origin.yaml
zeabus_controller/script/: LookUpPWM_2018.py
zeabus_controller/script/no_use_code/: teledyne_2018.txt
zeabus_controller/src/: .new_controller_2018.cpp.swp  do_not_have_dvl.cpp  force_controller.cpp  manage_control.cpp  new_controller_2018.cpp  sim_pid.cpp
zeabus_controller/srv/: fix_abs_depth.srv  fix_abs_x.srv  fix_abs_yaw.srv  fix_rel_xy.srv  ok_position.srv
zeabus_description/: CMakeLists.txt  package.xml
zeabus_description/launch/: xacrodisplay_zeabus_base.launch
zeabus_description/meshes/: perlican_base.dae  perlican_base.stl
zeabus_description/urdf/: common_properties.urdf.xacro  pelican_base.gazebo.xacro  pelican_base.urdf.xacro  pelican_sensors.urdf.xacro  pelican_sensors.urdf.xacro.save  zeabus_pelican.gazebo.xacro  zeabus_pelican.urdf.xacro  zeabus_pelican_full.gazebo.xacro  zeabus_pelican_full.urdf.xacro
zeabus_description/urdf/sensors/: generic_camera.urdf.xacro  generic_range_sensor.urdf.xacro  generic_stereo_camera.urdf.xacro  imu.urdf.xacro
zeabus_elec/zeabus_elec_ros_hardware_interface/launch/: hardware_interface.launch
zeabus_elec/zeabus_elec_ros_peripheral_bridge/launch/: peripheral_bridge.launch
zeabus_hydrophone/msg/: hydro_msg.msg  hydro_msg.msg~
zeabus_hydrophone/src/: hydro_pub_a_2017.py  hydro_pub_b_2017.py  hydro_pub_c_2017.py  hydro_pub_d_2017.py  hydro_pub_normal10.py~  hydro_thresh_panol.py  test.sh
zeabus_ui/: CMakeLists.txt  flight_display.py  main.py  mainWindow.ui  package.xml  script_install_package_zeabus.sh  ui.py  ui2016.py
zeabus_ui/launch/: ui.launch
zeabus_vision/: README.md
zeabus_vision/bag2img/: CMakeLists.txt  package.xml
zeabus_vision/bag2img/launch/: bag2img.launch
zeabus_vision/bag2img/src/: bag2img.py
zeabus_vision/zeabus_vision_main/: CMakeLists.txt  package.xml
zeabus_vision/zeabus_vision_main/launch/: bottom.launch  color_range_bottom.launch  color_range_bottom_afternoon.launch  color_range_bottom_morning.launch  color_range_top.launch  open_camera.launch  (+4 more)
zeabus_vision/zeabus_vision_mission/: CMakeLists.txt  package.xml
zeabus_vision/zeabus_vision_srv_msg/: CMakeLists.txt  package.xml
zeabus_vision/zeabus_vision_stereo/: CMakeLists.txt  package.xml  terminal.txt
zeabus_vision_example/: CMakeLists.txt  package.xml
zeabus_vision_example/launch/: flare.launch  gateV2.launch  gate_ken.launch  gate_service_ver.launch  get_color_example.launch  mission.launch  mission_with_many_var.launch  run_all_mission.launch  run_mission_example.launch
zeabus_vision_example/msg/: vision_drum.msg  vision_flare.msg  vision_gate.msg  vission_gate.msg
zeabus_vision_example/params/: color_example.yaml  color_night.yaml  color_sim.yaml
zeabus_vision_example/src/: call.py  color_range_example.py  drum.py  drum_example.py  flare.py  gate.py  mission_example.py  mission_exampleV2.py  mission_many_color.py  vision_lib.py
zeabus_vision_example/srv/: gate_vision.srv  vision_srv_drum.srv  vision_srv_flare.srv  vision_srv_gate.srv
(+70 files in other folders)
