<?xml version="1.0"?>
<package>
  <name>modbus_ascii_ros</name>
  <version>0.0.1</version>
  <description>modbus_ascii_ros</description>

  <maintainer email="mahisorn.w@hiveground.com">mahisorn</maintainer>
  <author>Mahisorn Wongphati</author>  
  <license>BSD</license>  
  <url type="website">http://iml.cpe.ku.ac.th/zeabus/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>  
  <run_depend>rospy</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  
  
  <export>
  	<cpp cflags="-I${prefix}/../modbus-ascii/master-device"/>
  </export>
</package>
